--- a/package.json
+++ b/package.json
@@ -142,7 +142,9 @@
     "vscode-nls-dev": "^3.3.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
-    "webpack-stream": "^5.1.1"
+    "webpack-stream": "^5.1.1",
+    "fs": "0.0.1-security",
+    "graphql-request": "1.8.2"
   },
   "repository": {
     "type": "git",
